SERVER-82838: Change ReshardingOplogApplier to use w:1 write concern when persisting resharding oplog application progress

GitOrigin-RevId: de25291fb15bff069f33fe11e8ed24ff5894e570